--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <div class="task_name">1. DOMPKONG :-</div>
                                 <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
                                     <a href="https://github.com/naman-398/DOMPKONG.git" target="_blank" class="links">GITHUB_LINK</a>
-                                    <a href="dompkong-six.vercel.app" target="_blank" class="links">LIVE_LINK</a>
+                                    <a href="https://dompkong-naman-398s-projects.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
                                 </div>
                             </div>
                             <img src="./assets/images/domp.png" alt="img" class="task-page-img">
@@ -33,7 +33,7 @@
                                 <div class="task_name">2. FT_PLANE :-</div>
                                 <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
                                     <a href="https://github.com/naman-398/FT_-_PLANE.git" target="_blank" class="links">GITHUB_LINK</a>
-                                    <a href="ftplane29.vercel.app" target="_blank" class="links">LIVE_LINK</a>
+                                    <a href="https://ftplane29-naman-398s-projects.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
                                 </div>
                             </div>
                             <img src="./assets/images/ft.png" alt="img" class="task-page-img">
@@ -43,7 +43,7 @@
                                 <div class="task_name">3. DESIGN_FURNITURE :-</div>
                                 <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
                                     <a href="https://github.com/naman-398/DESIGN_FURNITURE.git" target="_blank" class="links">GITHUB_LINK</a>
-                                    <a href="design-furniture.vercel.app" target="_blank" class="links">LIVE_LINK</a>
+                                    <a href="https://design-furniture.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
                                 </div>
                             </div>
                             <img src="./assets/images/design.png" alt="img" class="task-page-img">
@@ -53,7 +53,7 @@
                                 <div class="task_name">4. LEMON_WAVES :-</div>
                                 <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
                                     <a href="https://github.com/naman-398/LEMON_WAVES.git" target="_blank" class="links">GITHUB_LINK</a>
-                                    <a href="lemon-waves.vercel.app" target="_blank" class="links">LIVE_LINK</a>
+                                    <a href="https://lemon-waves-git-main-naman-398s-projects.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
                                 </div>
                             </div>
                             <img src="./assets/images/lemon.png" alt="img" class="task-page-img">
@@ -108,7 +108,7 @@
                                 <div class="task_name">5. DINO_LFG :-</div>
                                 <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
                                     <a href="https://github.com/naman-398/DINO_LFG.git" target="_blank" class="links">GITHUB_LINK</a>
-                                    <a href="dino-lfg-jet.vercel.app" target="_blank" class="links">LIVE_LINK</a>
+                                    <a href="https://dino-lfg-jet.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
                                 </div>
                             </div>
                             <img src="./assets/images/dino.png" alt="img" class="task-page-img">
