--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>ALL TASK</title>
 </head>
-<body>
+<body onload="showDefaultMonth()">
     <section class="position-relative">
         <div class=" profile-img-position d-flex align-items-center gap-sm-3 gap-2">
             <p class=" profile-name mb-0">NAMAN JYANI [398]</p>
         <img src="./assets/images/2F8D4BD1-EAB3-437A-A4A4-3691C8F59595.jpeg" alt="img" class=" profile-img">
     </div>
         <div class="container d-flex  flex-column">
-            <p class=" cm-name mb-0">RADIAL <span class=" cm-name2">CODE</span></p>
+            <p class=" cm-name mb-0 ">RADIAL <span class=" cm-name2">CODE</span></p>
             <div class="task_box" data-month="january">
                 <p class=" month-name text-center">JANUARY</p>
                     <div class="tasks d-flex flex-column gap-4">
@@ -208,7 +208,7 @@
                 <p class=" month-name text-center">DECEMBER</p>
 </div>
 <div class="dropdown position-absolute top-0 end-0 mt-3 me-3">
-    <button class=" drop-btn btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" onclick="showTasks('MONTHS')">
+    <button class=" drop-btn btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" onclick="showTasks('months')">
         MONTHS
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -229,21 +229,27 @@
      </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
-        function showTasks(selectedMonth) {
-            let taskBoxes = document.querySelectorAll('.task_box');
-            taskBoxes.forEach(taskBox => {
-                if (selectedMonth === 'MONTH' || taskBox.getAttribute('data-month') === selectedMonth) {
-                    taskBox.style.display = 'block';
-                } else {
-                    taskBox.style.display = 'none';
-                }
-            });
+        function showDefaultMonth() {
+        const currentDate = new Date();
+        const currentMonth = currentDate.toLocaleString('en-us', { month: 'long' }).toLowerCase();
+        showTasks(currentMonth);
+    }
 
-            document.getElementById("dropdownMenuButton").innerText = selectedMonth.charAt(0).toUpperCase() + selectedMonth.slice(1);
-        }
+    function showTasks(selectedMonth) {
+        let taskBoxes = document.querySelectorAll('.task_box');
+        taskBoxes.forEach(taskBox => {
+            if (selectedMonth === 'month' || taskBox.getAttribute('data-month') === selectedMonth) {
+                taskBox.style.display = 'block';
+            } else {
+                taskBox.style.display = 'none';
+            }
+        });
+
+        document.getElementById("dropdownMenuButton").innerText = selectedMonth.charAt(0).toUpperCase() + selectedMonth.slice(1);
+    }
     </script>
 </body>
 </html>
