--- a/index.html
+++ b/index.html
@@ -184,7 +184,19 @@
                 <p class=" month-name text-center">MAY</p>
 </div>
             <div class="task_box" data-month="april">
+                <div class="tasks d-flex flex-column gap-4">
                 <p class=" month-name text-center">APRIL</p>
+                <div class="task d-flex flex-md-row flex-column-reverse justify-content-between align-items-center">
+                    <div>
+                        <div class="task_name">1. NOBLE MIND :-</div>
+                        <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
+                            <a href="https://github.com/naman-398/NOBLE_MIND.git" target="_blank" class="links">GITHUB_LINK</a>
+                            <a href="https://noble-mind-1p6h.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
+                        </div>
+                    </div>
+                    <img src="./assets/images/noble.png" alt="img" class="task-page-img">
+                </div>
+                </div>
 </div>
             <div class="task_box" data-month="june">
                 <p class=" month-name text-center">JUNE</p>
