KodeDen page updated

--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
                     </div>
                     <img src="./assets/images/marc.png" alt="img" class="task-page-img">
                 </div>
+                <div class="task d-flex flex-md-row flex-column-reverse justify-content-between align-items-center">
+                    <div>
+                        <div class="task_name">4. KodeDen :-</div>
+                        <div class="task_links justify-content-center justify-content-md-start d-flex gap-3">
+                            <a href="https://github.com/naman-398/KodeDen.git" target="_blank" class="links">GITHUB_LINK</a>
+                            <a href="https://kode-den.vercel.app/" target="_blank" class="links">LIVE_LINK</a>
+                        </div>
+                    </div>
+                    <img src="./assets/images/kodden.png" alt="img" class="task-page-img">
+                </div>
                 </div>
 </div>
             <div class="task_box" data-month="june">
